--- a/requirements.txt
+++ b/requirements.txt
@@ -3,23 +3,13 @@ asn1crypto==0.24.0
 cffi==1.11.5
 cryptography==2.3
 cx-Oracle==6.4.1
-Django==2.0.7
 django-adminlte2==0.4.1
-django-graphiql==0.4.4
 graphene==2.1.3
 graphene-django==2.1.0
-graphql-core==2.1
-graphql-relay==0.4.5
-idna==2.7
-iso8601==0.1.12
-pkg-resources==0.0.0
+django-graphiql-0.4.4
+Pillow==5.2.0
 promise==2.1
 psycopg2==2.7.5
-psycopg2-binary==2.7.5
 pycparser==2.18
 PyMySQL==0.9.2
-pytz==2018.5
-Rx==1.6.1
-singledispatch==3.4.0.3
-six==1.11.0
 typing==3.6.4
